# lvr-meter

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  contributing.md  data-model.md  math.md
docs/adr/: 0001-use-rust-for-cli.md  0002-helius-as-rpc-provider.md  0003-borsh-deserialization-strategy.md  0004-disk-cache-for-transactions.md  0005-sqrtpricex64-representation.md  0006-discrete-time-lvr-approximation.md  0007-fee-growth-accumulator-approach.md  0008-grid-search-over-gradient-descent.md  README.md  TEMPLATE.md
scripts/: fetch_fixtures.sh
src/: cli.rs  lib.rs  main.rs
src/config/: date_range.rs  filters.rs  mod.rs  types.rs
src/engine/: accumulator.rs  analysis.rs  fees.rs  lvr.rs  mod.rs  range_efficiency.rs  regime.rs  verdict.rs
src/engine/optimizer/: mod.rs  params.rs  search.rs  simulator.rs
src/fetcher/: cache.rs  helius.rs  inventory.rs  mod.rs  multi_fetcher.rs  pipeline.rs  pool_fetcher.rs  rate_limiter.rs  rpc.rs  slot_time.rs  tx_fetcher.rs
src/fetcher/raydium/: mod.rs  pool_state.rs  position_fetcher.rs  types.rs
src/output/: historical_table.rs  json_output.rs  mod.rs  position_table.rs  progress.rs  recommendation_table.rs  summary.rs
src/parser/: account_state.rs  batch.rs  filters.rs  mod.rs  price.rs  types.rs
src/parser/raydium/: discriminator.rs  mod.rs  swap_parser.rs
tests/: cli_integration.rs  optimizer_property_tests.rs  parser_unit.rs  position_fetcher_integration.rs  tx_fetcher_integration.rs
tests/fixtures/: README.md
