[package]
name = "lvr-meter"
version = "0.1.0"
edition = "2024"
description = "LVR calculator and position optimizer for Solana CLMMs"
license = "MIT"
repository = "https://github.com/sabijuraa/lvr-meter"

[[bin]]
name = "lvr-meter"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1.0.82"
chrono = { version = "0.4.38", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenvy = "0.15.7"
borsh = "0.10"
bs58 = "0.5"
solana-account-decoder = "1.18.26"
solana-client = "1.18.26"
solana-sdk = "1.18.26"

[dev-dependencies]
tokio-test = "0.4.4"
assert_cmd = "2"
predicates = "3"
