[package]
name = "lvr-meter"
version = "0.1.0"
edition = "2021"
description = "LVR calculator and position optimizer for Solana CLMMs"
license = "MIT"
repository = "https://github.com/sabijuraa/lvr-meter"

[[bin]]
name = "lvr-meter"
path = "src/main.rs"

[dependencies]
anyhow                 = "1.0.82"
borsh                  = "0.10"
bs58                   = "0.5"
chrono                 = { version = "0.4.38", features = ["serde"] }
clap                   = { version = "4.5.4", features = ["derive"] }
dotenvy                = "0.15.7"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde                  = { version = "1.0.200", features = ["derive"] }
serde_json             = "1.0.116"
solana-account-decoder = "1.17.34"
solana-client          = "1.17.34"
solana-sdk             = "1.17.34"
solana-transaction-status = "1.17.34"
tokio                  = { version = "1.37.0", features = ["full"] }
tracing                = "0.1.40"
tracing-subscriber     = { version = "0.3.18", features = ["env-filter"] }
tabled = "0.15"
base64 = "0.22"
colored = "2"
indicatif = "0.17"

[dev-dependencies]
assert_cmd  = "2"
predicates  = "3"
tokio-test  = "0.4.4"
tempfile    = "3"
proptest    = "1"